--- a/app/scss/partials/_hub_side_navigation.scss
+++ b/app/scss/partials/_hub_side_navigation.scss
@@ -13,11 +13,8 @@
 
  // Side Navigation
  .SideNavigation__top {
- 	min-height: 100px;
- 	margin: 16px;
- }
- .SideNavigation__list {
- 	margin: 16px;
+ 	min-height: 80px;
+	background-color: $mystic;
  }
  .SideNavigation__bottom {
  	margin: 16px;
