--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -24,13 +24,15 @@ html, body, #root {
 .full-width { width: 100%; }
 .display-inline { display: inline-block; }
 
+@import 'settings_hub';
 @import './partials/_hub_mixins';
 @import './partials/_hub_svgs';
 @import './partials/_hub_side_navigation';
 @import './partials/_hub_other_partials'; // ToDo: Remove this file
 
-// Imports from ../hub directory for the Custom Setup Workflow
+@import '../hub/Views/HomeView/HomeView.scss';
 @import '../hub/Views/SetupView/SetupView.scss';
+@import '../hub/Views/SetupViews/SetupModal/SetupModal.scss';
 @import '../hub/Views/SetupViews/SetupHeader/SetupHeader.scss';
 @import '../hub/Views/SetupViews/SetupBlockingView/SetupBlockingView.scss';
 @import '../hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss';
