--- a/app/scss/partials/_hub_other_partials.scss
+++ b/app/scss/partials/_hub_other_partials.scss
@@ -33,6 +33,10 @@
 		}
 	}
 	a {
+		height: 80px;
+		.flex-child-auto {
+			max-width: 160px;
+		}
 		color: $white;
 		&.active {
 			text-decoration: underline;
