--- a/app/hub/components/SideNavigation.scss
+++ b/app/hub/components/SideNavigation.scss
@@ -43,7 +43,7 @@
 		background-color: $mystic;
 	}
 	.SideNavigation__bottom {
-		margin: 16px;
+		margin: 0px 0px 20px 20px;
 	}
 	.active .arrow-left {
 		position: relative;
