--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -33,6 +33,7 @@ html, body, #root {
 @import '../hub/Views/SetupView/SetupView.scss';
 @import '../hub/Views/SetupViews/SetupHeader/SetupHeader.scss';
 @import '../hub/Views/SetupViews/SetupBlockingView/SetupBlockingView.scss';
+@import '../hub/Views/SetupViews/SetupBlockingDropdown/SetupBlockingDropdown.scss';
 @import '../hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss';
 @import '../hub/Views/SetupViews/SetupHumanWebView/SetupHumanWebView.scss';
 @import '../hub/Views/SetupViews/SetupDoneView/SetupDoneView.scss';
