--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -50,6 +50,8 @@ html, body, #root {
 @import '../hub/Views/SetupViews/SetupHumanWebView/SetupHumanWebView.scss';
 @import '../hub/Views/SetupViews/SetupDoneView/SetupDoneView.scss';
 
+@import '../hub/Views/TutorialView/TutorialView.scss';
+
 // Imports from ../shared-components directory
 @import '../shared-components/Modal/Modal.scss';
 @import '../shared-components/SteppedNavigation/SteppedNavigation.scss';
